# DMD_toolbox

./: .gitignore  DMD_Analysis_Gab.ipynb  LICENSE.md  README.md  blazing_angle_DMD.ipynb  blazing_condition.py  pattern_generation.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: base_pull_request.md
.nix/: flake.nix
docs/source/: conf.py  index.rst
notebooks/: blazing_condition.ipynb  pattern_generation.ipynb
src/dmd_toolbox/: blazing_condition.py  pattern_generation.py
src/dmd_toolbox/blazing/: __init__.py  _core.py
src/dmd_toolbox/pattern/: __init__.py  _core.py  dataloader.py  func.py  random.py
src/dmd_toolbox/pattern_generation/: __init__.py  utils.py
src/dmd_toolbox/utils/: __init__.py  tex_utils.py
