[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "DMD_toolbox"
authors = [
    {name = "Gabriel Seigneur", email = "gabseig@mit.edu"},
    {name = "Hugo Hakem", email = "hugo.hakem@berkeley.edu"}
]
description = ""
license = { file = "LICENSE.md" }
readme = "README.md"
version = "0.1.0"

requires-python = ">= 3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "pillow",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-copybutton",
    "furo",
    "doc8",
    "rstcheck",
    "esbonio",
    "pandoc",
]

dev = ["DMD_toolbox[docs]"]

[tool.hatch.build.targets.wheel]
packages = ["src/dmd_toolbox"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
DMD_toolbox = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.docs.dependencies]
pandoc = ">=3.1.11"

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
dev = { features = ["docs"], solve-group = "default" }


